# desktop_widgets

./: .gitignore  CMakeLists.txt  DesktopWidgets  README.md  runit.sh
.qt/: QtDeploySupport.cmake
DesktopWidgets_autogen/: deps  mocs_compilation.cpp
DesktopWidgets_autogen/6YEA5652QU/: moc_BaseWidget.cpp  moc_BaseWidget.cpp.d  moc_ColorWidget.cpp  moc_ColorWidget.cpp.d  moc_DigitalClockWidget.cpp  moc_DigitalClockWidget.cpp.d  moc_MainWidget.cpp  moc_MainWidget.cpp.d  moc_ToDoListWidget.cpp  moc_ToDoListWidget.cpp.d
include/: BaseWidget.h  CalendarWidget.h  ColorWidget.h  DigitalClockWidget.h  ImageWidget.h  MainWidget.h  SettingsWidget.h  StatArcWidget.h  StickyNoteWidget.h  StickyNotesWidget.h  SystemStatsDashboard.h  ToDoListWidget.h  WidgetManager.h  WidgetManagerDialog.h
src/: BaseWidget.cpp  CalendarWidget.cpp  ColorWidget.cpp  DigitalClockWidget.cpp  ImageWidget.cpp  MainWidget.cpp  SettingsWidget.cpp  StatArcWidget.cpp  StickyNoteWidget.cpp  StickyNotesWidget.cpp  SystemStatsDashboard.cpp  ToDoListWidget.cpp  WidgetManager.cpp  WidgetManagerDialog.cpp  main.cpp
